Actions
Bug #9687
closedSMF service cannot be disabled
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Start date:
2018-07-31
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
We had a system where an SMF service was stuck in offline state. The properties were showing the service as disabled but SMF was not making the transition. Killing svc.startd - which usually resolves this kind of weirdness - didn't help. I was able to reproduce the problem on another system by replicating the SMF properties exactly. This issue is down to a longtime bug in gt_enter_offline where services that have GV_ENABLED set are not sent RESTARTER_EVENT_TYPE_DISABLE even though GV_TODISABLE is set.
Updated by Andrew Stormont about 4 years ago
Updated by Andrew Stormont almost 3 years ago
- Description updated (diff)
- Status changed from New to Pending RTI
Updated by Electric Monk almost 3 years ago
- Status changed from Pending RTI to Closed
- % Done changed from 0 to 100
git commit 53b8aa11a4b4383655db95e7986c9d5c191e507d
commit 53b8aa11a4b4383655db95e7986c9d5c191e507d Author: Andrew Stormont <astormont@racktopsystems.com> Date: 2019-10-05T10:26:00.000Z 9687 SMF service cannot be disabled Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Garrett D'Amore <gdamore@racktopsystems.com>
Actions