9687 SMF service cannot be disabled Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Garrett D'Amore <gdamore@racktopsystems.com>